tests/codegen/fail/subscription/field_not_async.stderr
error: GraphQL object synchronous resolvers are not supported
  --> fail/subscription/field_not_async.rs:11:5
   |
11 |     fn id(&self) -> Stream<'static, bool> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: https://spec.graphql.org/October2021#sec-Objects
   = note: Specify that this function is async: `async fn foo()`
